add file description

--- a/task.html
+++ b/task.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		This is a skeleton html file that you can use to get you started on each new HTML project!
 	</head>
 	<body>
 	</body>
